Fixing npe